force-app/main/default/objects/Lead/fields/Nurture_Status__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Status__c</fullName>
    <label>Nurture Status</label>
    <length>255</length>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Active Nurture</fullName>
            </value>
            <value>
                <fullName>Re-engagement</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <visibilityPublic</visibilityPublic>
</CustomField>