force-app/main/default/objects/Lead/fields/Qualification_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date__c</fullName>
    <label>Qualification Date</label>
    <type>Date</type>
    <visibilityPublic</visibilityPublic>
</CustomField>