force-app/main/default/objects/Lead/validationRules/Prevent_Lead_Without_Email_Or_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Lead_Without_Email_Or_Phone</fullName>
    <active>true</active>
    <description>Prevents saving a Lead without either Email or Phone</description>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(Email),
    ISBLANK(Phone)
)</errorConditionFormula>
    <errorMessage>At least one of Email or Phone is required</errorMessage>
    <errorDisplayField>Email</errorDisplayField>
</ValidationRule>